--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -2,3 +2,7 @@
     background-color: lightcoral;
     font-family: Verdana, "DejaVu Sans", sans-serif;
 }
+
+.increase-size {
+    font-size: 24px;
+}
