feat: add a light green background and bold 24px font to div with `#two` id

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -11,3 +11,9 @@
     color: blue;
     font-size: 36px;
 }
+
+#two {
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: bold;
+}
