--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -2,3 +2,8 @@
 	font-size: 28px;
 	font-family: Helvetica, "Times New Roman", sans-serif;
 }
+
+.black {
+	background-color: black;
+	color: white;
+}
