--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,5 +1,9 @@
-.avatar,
-.proportioned {
+.avatar.proportioned {
 	width: 300px;
 	height: 100%;
+}
+
+.avatar.distorted {
+	width: 200px;
+	height: 400px;
 }
